# movie_theater

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  create_admin.py  docker-compose.yml  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 166899d14d4f_create_user_table.py  2cdf53bef1ce__final_imports.py  797a22daff36_.py  7ee01fde3e19_create_movie_tables.py  aa5834e38eee_.py  c5d25733403d_initial_full_schema.py  c760531a18d2_create_comments_reactions__tables.py
app/: config.py  database.py  exceptions.py  main.py
app/api/: dependencies.py
app/api/routes/: users.py
app/auth/: crud.py  dependencies.py  models.py  router.py  schemas.py  service.py  tasks.py
app/cart/: crud.py  models.py  router.py  schemas.py  service.py
app/core/: interface.py  security.py  token_manager.py  validators.py
app/models/: user.py
app/movies/: crud.py  models.py  router.py  schemas.py  service.py
app/notifications/: emails.py  interfaces.py
app/notifications/templates/: activation_complete.html  activation_request.html  password_reset_complete.html  password_reset_request.html
app/orders/: crud.py  models.py  router.py  schemas.py  service.py
app/payments/: crud.py  models.py  router.py  schemas.py
app/schemas/: user.py
app/services/: user_service.py
storages/: s3.py
