[tool.poetry]
name = "src"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = {extras = ["standart"], version = "^0.40.0"}
asyncpg = "^0.31.0"
pydantic-settings = "^2.12.0"
alembic = "^1.18.1"
sqlalchemy = {extras = ["email"], version = "^2.0.46"}
passlib = "^1.7.4"
email-validator = "^2.3.0"
python-jose = "^3.5.0"
